--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
             gap: 15px;
+            margin-bottom: 30px;
         }
         .card {
             border-radius: 10px;
