--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
             gap: 15px;
+            margin-bottom: 30px;
         }
         .card {
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s ease;
             padding: 10px;
-
         }
         .card:hover {
             transform: translateY(-10px);
@@ -45,11 +45,27 @@
         }
         .card-text {
             font-size: 1rem;
+            min-height: 100px;
         }
-        .btn-primary {
-            border-radius: 50px;
-            padding: 10px 20px;
-            font-size: 1rem;
+        .card-body {
+            position: relative;
+        }
+        .card-content {
+            position: relative;
+            padding-bottom: 50px; /* Для размещения кнопки */
+        }
+        .card-body .btn-primary {
+            position: absolute;
+            bottom: 10px;
+            left: 10px;
+        }
+
+        .select-duration {
+            margin-bottom: 1rem;
+        }
+        .card-content {
+            position: relative;
+            padding-bottom: 50px; /* Для размещения кнопки */
         }
         header {
             padding-left: 20px;
@@ -82,9 +98,18 @@
             <div class="card-header bg-secondary text-white">
                 Базовый
             </div>
-            <div class="card-body">
-                <h5 class="card-title">199 руб/мес</h5>
-                <p class="card-text">Основные функции сервиса.</p>
+            <div class="card-body card-content">
+                <h5 class="card-title price">199 руб/мес</h5>
+                <div class="card-text">Основные функции сервиса.</div>
+                <div class="mb-3 select-duration">
+                    <label for="basicPlanDuration" class="form-label">Выберите срок:</label>
+                    <select class="form-select" id="basicPlanDuration" onchange="updatePrice(this)">
+                        <option value="1" data-price="199">1 месяц</option>
+                        <option value="3" data-price="549">3 месяца</option>
+                        <option value="6" data-price="999">6 месяцев</option>
+                        <option value="12" data-price="1799">1 год</option>
+                    </select>
+                </div>
                 <a href="#1" class="btn btn-primary">Купить</a>
             </div>
         </div>
@@ -94,9 +119,18 @@
             <div class="card-header bg-secondary text-white">
                 Стандарт
             </div>
-            <div class="card-body">
-                <h5 class="card-title">399 руб/мес</h5>
-                <p class="card-text">Все функции базового плюс дополнительные возможности.</p>
+            <div class="card-body card-content">
+                <h5 class="card-title price">399 руб/мес</h5>
+                <div class="card-text">Все функции базового плюс дополнительные возможности.</div>
+                <div class="mb-3 select-duration">
+                    <label for="standardPlanDuration" class="form-label">Выберите срок:</label>
+                    <select class="form-select" id="standardPlanDuration" onchange="updatePrice(this)">
+                        <option value="1" data-price="399">1 месяц</option>
+                        <option value="3" data-price="1149">3 месяца</option>
+                        <option value="6" data-price="2199">6 месяцев</option>
+                        <option value="12" data-price="4199">1 год</option>
+                    </select>
+                </div>
                 <a href="#2" class="btn btn-primary">Купить</a>
             </div>
         </div>
@@ -106,9 +140,18 @@
             <div class="card-header bg-secondary text-white">
                 Премиум
             </div>
-            <div class="card-body">
-                <h5 class="card-title">799 руб/мес</h5>
-                <p class="card-text">Все функции стандарта плюс премиум поддержка.</p>
+            <div class="card-body card-content">
+                <h5 class="card-title price">799 руб/мес</h5>
+                <div class="card-text">Все функции стандарта плюс премиум поддержка.</div>
+                <div class="mb-3 select-duration">
+                    <label for="premiumPlanDuration" class="form-label">Выберите срок:</label>
+                    <select class="form-select" id="premiumPlanDuration" onchange="updatePrice(this)">
+                        <option value="1" data-price="799">1 месяц</option>
+                        <option value="3" data-price="2399">3 месяца</option>
+                        <option value="6" data-price="4599">6 месяцев</option>
+                        <option value="12" data-price="8999">1 год</option>
+                    </select>
+                </div>
                 <a href="#3" class="btn btn-primary">Купить</a>
             </div>
         </div>
@@ -118,9 +161,18 @@
             <div class="card-header bg-secondary text-white">
                 Корпоративный
             </div>
-            <div class="card-body">
-                <h5 class="card-title">1499 руб/мес</h5>
-                <p class="card-text">Все функции премиума плюс поддержка 24/7.</p>
+            <div class="card-body card-content">
+                <h5 class="card-title price">1499 руб/мес</h5>
+                <div class="card-text">Все функции премиума плюс поддержка 24/7.</div>
+                <div class="mb-3 select-duration">
+                    <label for="corporatePlanDuration" class="form-label">Выберите срок:</label>
+                    <select class="form-select" id="corporatePlanDuration" onchange="updatePrice(this)">
+                        <option value="1" data-price="1499">1 месяц</option>
+                        <option value="3" data-price="4499">3 месяца</option>
+                        <option value="6" data-price="8799">6 месяцев</option>
+                        <option value="12" data-price="16999">1 год</option>
+                    </select>
+                </div>
                 <a href="#4" class="btn btn-primary">Купить</a>
             </div>
         </div>
@@ -138,5 +190,13 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.min.js"></script>
+<script>
+    function updatePrice(selectElement) {
+        const priceElement = selectElement.closest('.card-body').querySelector('.price');
+        const selectedOption = selectElement.options[selectElement.selectedIndex];
+        const price = selectedOption.getAttribute('data-price');
+        priceElement.textContent = price + ' руб/' + (selectElement.value === '1' ? 'мес' : 'период');
+    }
+</script>
 </body>
 </html>
