--- a/additional-packages.html
+++ b/additional-packages.html
@@ -6,76 +6,8 @@
     <title>Дополнительные пакеты</title>
     <!-- Подключение Bootstrap CSS через CDN -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-            margin: 0;
-            font-family: sans-serif;
-        }
-        main {
-            flex-grow: 1;
-            padding-top: 10px;
-            padding-bottom: 150px;
-            margin: 20px;
-        }
-        .pricing-table {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
-            gap: 15px;
-            margin-bottom: 30px;
-        }
-        .card {
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease;
-            padding: 10px;
-        }
-        .card:hover {
-            transform: translateY(-10px);
-        }
-        .card-header {
-            font-size: 1.5rem;
-            font-weight: bold;
-        }
-        .card-title {
-            font-size: 2rem;
-            color: #007bff;
-        }
-        .card-text {
-            font-size: 1rem;
-            min-height: 100px;
-        }
-        .card-body {
-            position: relative;
-        }
-        .card-content {
-            position: relative;
-            padding-bottom: 50px; /* Для размещения кнопки */
-        }
-        .card-body .btn-primary {
-            position: absolute;
-            bottom: 10px;
-            left: 10px;
-        }
-        header {
-            padding-left: 20px;
-            background: linear-gradient(90deg, rgba(0,212,255,1) 60%, rgba(9,9,121,1) 100%);
-        }
-        footer {
-            background-color: #f8f9fa;
-            padding: 2rem 0;
-            text-align: center;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-        .footer-text {
-            font-size: 0.9rem;
-            color: #6c757d;
-        }
-    </style>
+    <link rel="stylesheet" href="additional-packages.css">
+
 </head>
 <body>
 <header class="text-white text-center py-5">
@@ -91,7 +23,7 @@
                 Новый
             </div>
             <div class="card-body card-content">
-                <h5 class="card-title" id="package1Price">500 руб/мес</h5>
+                <h5 class="card-title price" id="package1">500 руб/мес</h5>
                 <div class="card-text">Дополнительные функции сервиса.</div>
                 <div class="mb-3">
                     <label for="newPackageDuration" class="form-label">Выберите срок:</label>
@@ -112,7 +44,7 @@
                 Супер
             </div>
             <div class="card-body card-content">
-                <h5 class="card-title" id="package2Price">300 руб/мес</h5>
+                <h5 class="card-title price" id="package2">300 руб/мес</h5>
                 <div class="card-text">Бонусные функции сервиса.</div>
                 <div class="mb-3">
                     <label for="superPackageDuration" class="form-label">Выберите срок:</label>
@@ -133,7 +65,7 @@
                 Удачный
             </div>
             <div class="card-body card-content">
-                <h5 class="card-title" id="package3Price">700 руб/мес</h5>
+                <h5 class="card-title price" id="package3">700 руб/мес</h5>
                 <div class="card-text">Расширенные функции сервиса.</div>
                 <div class="mb-3">
                     <label for="luckyPackageDuration" class="form-label">Выберите срок:</label>
@@ -154,7 +86,7 @@
                 Вариант
             </div>
             <div class="card-body card-content">
-                <h5 class="card-title" id="package4Price">450 руб/мес</h5>
+                <h5 class="card-title price" id="package4">450 руб/мес</h5>
                 <div class="card-text">Улучшенные функции сервиса.</div>
                 <div class="mb-3">
                     <label for="variantPackageDuration" class="form-label">Выберите срок:</label>
@@ -175,7 +107,7 @@
                 Любимый
             </div>
             <div class="card-body card-content">
-                <h5 class="card-title" id="package5Price">600 руб/мес</h5>
+                <h5 class="card-title price" id="package5">600 руб/мес</h5>
                 <div class="card-text">Премиум функции сервиса.</div>
                 <div class="mb-3">
                     <label for="favoritePackageDuration" class="form-label">Выберите срок:</label>
@@ -206,15 +138,7 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.min.js"></script>
 
-<script>
-    function updatePrice(selectElement) {
-        const priceElement = selectElement.closest('.card-body').querySelector('.card-title');
-        const selectedOption = selectElement.options[selectElement.selectedIndex];
-        const price = selectedOption.getAttribute('data-price');
-        priceElement.textContent = price + ' руб/мес';
-    }
-
-</script>
+<script src="./updatePrice.js"></script>
 
 </body>
 </html>
