--- a/index.html
+++ b/index.html
@@ -6,84 +6,8 @@
     <title>Подписка на сервис</title>
     <!-- Подключение Bootstrap CSS через CDN -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-            margin: 0;
-            font-family: sans-serif;
-        }
-        main {
-            flex-grow: 1;
-            padding-top: 10px;
-            padding-bottom: 150px;
-            margin: 20px;
-        }
-        .pricing-table {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
-            gap: 15px;
-            margin-bottom: 30px;
-        }
-        .card {
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease;
-            padding: 10px;
-        }
-        .card:hover {
-            transform: translateY(-10px);
-        }
-        .card-header {
-            font-size: 1.5rem;
-            font-weight: bold;
-        }
-        .card-title {
-            font-size: 2rem;
-            color: #007bff;
-        }
-        .card-text {
-            font-size: 1rem;
-            min-height: 100px;
-        }
-        .card-body {
-            position: relative;
-        }
-        .card-content {
-            position: relative;
-            padding-bottom: 50px; /* Для размещения кнопки */
-        }
-        .card-body .btn-primary {
-            position: absolute;
-            bottom: 10px;
-            left: 10px;
-        }
+    <link rel="stylesheet" href="index.css">
 
-        .select-duration {
-            margin-bottom: 1rem;
-        }
-        .card-content {
-            position: relative;
-            padding-bottom: 50px; /* Для размещения кнопки */
-        }
-        header {
-            padding-left: 20px;
-            background: linear-gradient(90deg, rgba(0,212,255,1) 60%, rgba(9,9,121,1) 100%);
-        }
-        footer {
-            background-color: #f8f9fa;
-            padding: 2rem 0;
-            text-align: center;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-        .footer-text {
-            font-size: 0.9rem;
-            color: #6c757d;
-        }
-    </style>
 </head>
 <body>
 <header class="text-white text-center py-5">
@@ -190,13 +114,6 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.min.js"></script>
-<script>
-    function updatePrice(selectElement) {
-        const priceElement = selectElement.closest('.card-body').querySelector('.price');
-        const selectedOption = selectElement.options[selectElement.selectedIndex];
-        const price = selectedOption.getAttribute('data-price');
-        priceElement.textContent = price + ' руб/' + (selectElement.value === '1' ? 'мес' : 'период');
-    }
-</script>
+<script src="./updatePrice.js"></script>
 </body>
 </html>
